# profile-activity-collector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  spec.md  tasks.md  upgrade-prompts.md
.github/specs/: README.md  template.md
.github/specs/improved-cli-ux/: spec.md
.specify/memory/: constitution.md
facebook-activity-logger/: .env.example  README.md
facebook-activity-logger/src/: __init__.py  config.py  main.py  models.py
facebook-activity-logger/src/analytics/: activity_summary.py  engagement_summary.py
facebook-activity-logger/src/importers/: __init__.py  facebook_export_importer.py  graph_api_importer.py
facebook-activity-logger/src/parsers/: __init__.py  html_parser.py  json_parser.py
facebook-activity-logger/src/reports/: json_export.py  markdown_report.py
facebook-activity-logger/tests/: test_database.py  test_fixture_archives.py  test_importer.py  test_models.py
linkedin-activity-logger/: .env.example  README.md  requirements.txt
linkedin-activity-logger/src/: __init__.py  config.py  database.py  main.py  models.py
linkedin-activity-logger/tests/: test_database.py  test_fixture_archives.py  test_importer.py  test_models.py
profile_activity_core/: __init__.py  analytics.py  database.py  models.py  reports.py  validation.py
scripts/: run_tests.py
tests/: test_core_database.py
x-activity-logger/: .env.example  .gitignore  README.md
x-activity-logger/src/: __init__.py  config.py  main.py  models.py
x-activity-logger/tests/: test_database.py  test_fixture_archives.py  test_importer.py  test_models.py
(+29 files in other folders)
