[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-activity-collector"
version = "0.1.0"
description = "Local-first social profile activity ingestion and reporting tools."
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[tool.setuptools.packages.find]
include = ["profile_activity_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
